--- a/Views/GioHangs/Index.cshtml
+++ b/Views/GioHangs/Index.cshtml
@@ -65,7 +65,7 @@
                                     <button type="button" class="btn btn-outline-danger"
                                             id="delete-btn"
                                             onclick="confirmDeleted(event,this,'@item.TenSanPham')">
-                                        <i class="bi bi-trash"></i>
+                                        <i class="fa-solid fa-trash"></i>
                                     </button>
                                 </form>
                             </td>
